--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                 <div class="container-fluid">
 
                     <div class="mil-footer-bottom">
-                        <p class="mil-light-soft mil-mb-15">Norton-Gauss© All rights reserved.</p>
+                        <p class="mil-light-soft mil-mb-15">Norton-Gauss© All rights reserved</p>
                         <ul class="mil-light-soft mil-mb-15">
                             <li><a href="https://www.linkedin.com/company/nortongauss/" target="_blank">LinkedIn</a></li>
                         </ul>
